feat: add swagger annotation and index post route
